# loco-mujoco

./: .gitignore  MUJOCO_LOG.TXT  Makefile  README.md  install.yaml  pyproject.toml  requirements.txt  setup.py  test_file.ipynb  test_file.py
.github/workflows/: continuous_integration.yml
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt  utils.py
docs/source/: loco_mujoco.amass_installation.rst  loco_mujoco.api.rst  loco_mujoco.core.rst  loco_mujoco.environments.humanoids.rst  loco_mujoco.environments.quadrupeds.rst  loco_mujoco.installation.rst  loco_mujoco.task_factories.rst  loco_mujoco.trajectory.rst
examples/: jax_training.py  speed_test.py
examples/AMASS/: example.py
examples/LAFAN1/: example.py
examples/data_process/: README.MD  check_fk.py  fit_smpl_motion.py  fit_smpl_shape.py  vis_motion_mj.py  vis_motion_mujoco.py
examples/jax_amp/: conf.yaml  eval.py  experiment.py
examples/jax_gail/: README.md  conf.yaml  eval.py  experiment.py  sweeps.yaml
examples/jax_rl/: conf.yaml  eval.py  experiment.py
examples/jax_rl_mimic/: README.md  conf.yaml  eval.py  experiment.py  sweeps.yaml
examples/replay_datasets/: example.py  record_all.py  (+6 more)
loco_mujoco/: __init__.py
retargeting_scripts/: generate_berkeley_dataset.py  generate_h1_default.py  view_dataset.py
tests/: conftest.py  test_algorithms.py  test_control_functions.py  test_domain_randomizer.py  test_goals.py  test_initial_state_handler.py  test_mjx.py  test_observation.py  test_reward.py  test_task_factories.py  test_terminal_state_handler.py  test_test_conf.py  test_trajectory.py
(+285 files in other folders)
